# prompt-guard

./: .gitignore  LICENSE  Makefile  README.MD  README.MD.OLD  benchmark.ipynb  benchmark.py  entry_point.py  example.py  guardrail.py  healthcheck.py  main.py  pyproject.toml  requirements.txt  source.ipynb
adhoc/: anomaly_detection_dataset.ipynb  malicious_embedding_data.ipynb  source.ipynb  upload_embedding_dataset_to_atlas.ipynb
adhoc/general/: anomaly_detection_dataset.ipynb  malicious_embedding_data.ipynb
adhoc/general/output/: vectorizer.pkl
adhoc/judicial/: model_validation.py  translate.ipynb
adhoc/models/: text_data.pkl
adhoc/v2/: model_validation.py
app/: guardrail.py
app/providers/: Sanitize.py
chain/: ChainVectorStore.py
huggingface/: Deberta.py  Embedding.py
models/: ocsvm_model.pkl
providers/: AnomalyDetection.py  Canary.py  FaissVectorStore.py  MongoDBVectorStore.py  Sanitize.py  VectorStore.py  VectorStoreStrategy.py
