[project]
name = "guardrail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "faiss-cpu>=1.11.0",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pymongo>=4.13.2",
    "ruff>=0.12.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "ruff>=0.12.0",
]
